<resources>
    <string name="app_name">App</string>
    <string name="title">DriveNext</string>
    <string name="slogan">Поможем найти твою следующую поездку</string>
    <string name="login">Войти</string>
    <string name="signup">Зарегистрироваться</string>
    <string name="next">Далее</string>
    <string name="upload_photo">Загрузить фото</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date_format">%1$d/%2$d/%3$d</string>

    <string name="refundable_deposit"><u>Возвращаемый депозит</u></string>
    <string name="car_adress">Адрес нахождения</string>
    <string name="rent_start">Начало аренды</string>
    <string name="rent_end">Конец аренды</string>
    <string name="rent">Аренда</string>
    <string name="insurance">Страховка</string>
    <string name="total">Общая сумма</string>
    <string name="name">name</string>
    <string name="address">address</string>
    <string name="description">description</string>
    <string name="price">price</string>
    <string name="insurance_price">insurance_price</string>
    <string name="type">type</string>
    <string name="model">model</string>
    <string name="per_day">в день</string>
    <string name="status">status</string>
    <string name="date">date</string>
    <string name="id">id</string>
    <string name="license">license</string>

</resources>