<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_chekout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.settings.BookingFragment">

    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_arrow_back" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextViewStyleH1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:text="Бронирование # " />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_booking_number"
            style="@style/TextViewStyleH1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id" />

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/ll_title"
        app:strokeColor="@color/main_color"
        app:strokeWidth="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"
            android:paddingVertical="30dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/iv_car"
                app:layout_constraintEnd_toStartOf="@+id/iv_car"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/iv_car">

                <TextView
                    android:id="@+id/tv_type"
                    style="@style/TextViewStyleH1.5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type" />

                <TextView
                    android:id="@+id/tv_model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center_horizontal"
                    android:text="@string/model"
                    android:textColor="#200D0D0D"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:id="@+id/tv_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:gravity="center_horizontal"
                        android:text="@string/price"
                        android:textColor="#0D0D0D"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tw_period"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:fontFamily="@font/montserrat_medium"
                        android:gravity="center_horizontal"
                        android:text="в день"
                        android:textColor="#200D0D0D"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/iv_car"
                android:layout_width="176dp"
                android:layout_height="136dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_car"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/cv_card">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    style="@style/TextViewStyleMedium14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/car_adress" />

                <TextView
                    style="@style/TextViewStyleMedium14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/rent_start" />


                <TextView
                    style="@style/TextViewStyleMedium14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/rent_end" />

                <TextView
                    style="@style/TextViewStyleMedium14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="ФИО водителя" />

                <TextView
                    style="@style/TextViewStyleMedium14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="Номер ВУ" />

                <TextView
                    style="@style/TextViewStyleMedium14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Статус аренды" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_address"
                    style="@style/TextViewStyleH2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/address" />

                <TextView
                    android:id="@+id/tv_rent_start"
                    style="@style/TextViewStyleH2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/date" />

                <TextView
                    android:id="@+id/tv_rent_end"
                    style="@style/TextViewStyleH2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/date" />


                <TextView
                    android:id="@+id/tv_user"
                    style="@style/TextViewStyleH2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/tv_license"
                    style="@style/TextViewStyleH2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/license" />

                <TextView
                    style="@style/TextViewStyleH2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="Одобрено" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/v_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:background="#D0D5DD" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        style="@style/TextViewStyleMedium14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rent" />

                    <TextView
                        android:id="@+id/tv_rent_count_days"
                        style="@style/TextViewStyleH2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="x" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp">

                    <TextView
                        style="@style/TextViewStyleMedium14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/insurance" />

                    <TextView
                        android:id="@+id/tv_insurance_count_days"
                        style="@style/TextViewStyleH2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="x" />

                </LinearLayout>

                <TextView
                    style="@style/TextViewStyleH1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_rent_price"
                    style="@style/TextViewStyleH2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/price" />

                <TextView
                    android:id="@+id/tv_insurance_price"
                    style="@style/TextViewStyleH2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:text="@string/price" />

                <TextView
                    android:id="@+id/tv_total"
                    style="@style/TextViewStyleH1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="110dp"
        android:backgroundTint="@color/main_color"
        android:fontFamily="@font/montserrat_regular"
        android:paddingVertical="14dp"
        android:text="Отменить бронирование"
        android:textSize="14sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>